[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive"] }
confy = "0.4.0"
console = "0.15.1"
dialoguer = "0.10.2"
execute = "0.2.11"
indicatif = "0.17.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
